[package]
name = "cepstrum-extractor"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["Skilfingr <skilvingr@gmail.com>"]

description = "An easy-to-use crate to compute the cepstrum of a signal."
repository = "https://github.com/Skilvingr/rust-cepstrum-extractor"
license = "MIT OR Apache-2.0"
keywords = ["cepstrum", "extractor", "cepstral", "quefrency", "audio"]
categories = ["multimedia", "multimedia::audio", "science"]
documentation = "https://docs.rs/cepstrum-extractor"

[dependencies]
rustfft = "6.2.0"

[dev-dependencies]
rayon = "1.10.0"

[target.'cfg(examples)'.dev-dependencies]
minifb = "0.27.0"
plotters = "0.3.6"