[package]
name = "cepstrum-extractor"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["Skilfingr <skilvingr@gmail.com>"]

description = "An easy-to-use crate to compute the cepstrum of a signal."
repository = "https://github.com/Skilvingr/rust-cepstrum-extractor"
license = "MIT OR Apache-2.0"
keywords = ["cepstrum", "extractor", "cepstral", "quefrency", "audio"]
categories = ["multimedia", "multimedia::audio", "science"]
documentation = "https://docs.rs/cepstrum-extractor"

[dependencies]
rustfft = "6.2.0"

[dev-dependencies]
divan = "0.1.18"
rayon = "1.10.0"
minifb = "0.28.0"
plotters = "0.3.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(bench)'] }

[[bench]]
name = "main"
harness = false

[[example]]
name = "simple"

[[example]]
name = "concurrent"