[package]
name = "cepstrum-extractor"
version = "0.2.1"
edition = "2024"
readme = "README.md"
authors = ["Skilfingr <skilvingr@gmail.com>"]

description = "An easy-to-use crate to compute the cepstrum of a signal."
repository = "https://github.com/Skilvingr/rust-cepstrum-extractor"
license = "MIT OR Apache-2.0"
keywords = ["cepstrum", "extractor", "cepstral", "quefrency", "audio"]
categories = ["multimedia", "multimedia::audio", "science"]
documentation = "https://docs.rs/cepstrum-extractor"

[dependencies]
rustfft = "6.4"

[dev-dependencies]
divan = "0.1.21"
rayon = "1.10.0"
minifb = "0.28.0"
plotters = "0.3.7"

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "concurrent"
path = "examples/concurrent.rs"
